syntax = "proto3";

package hertz_gateway.cart;

import "api.proto";
import "hertz_gateway/common.proto";

option go_package = "/hertz_gateway/cart";

service CartService {
  rpc AddCartItem(AddCartItemReq) returns (common.Empty){
    option (api.post) = "/cart";
  }
  rpc GetCart(common.Empty) returns (common.Empty){
    option (api.get) = "/cart";
  }
}

message AddCartItemReq {
  uint32 product_id = 1 [(api.form) = "productId"];
  int32 product_num = 2 [(api.form) = "productNum"];
}

