syntax = "proto3";

package hertz_gateway.product;

import "api.proto";
import "hertz_gateway/common.proto";

option go_package = "hertz_gateway/product";
message Empty {}

service ProductService {
  rpc GetProduct(ProductReq) returns (common.Empty) {
    option (api.get) = "/product";
  }
  rpc SearchProducts(SearchProductsReq) returns (common.Empty) {
    option (api.get) = "/product/search";
  }
}
message ProductReq {
  int64 id = 1 [ (api.query) = "id"];
}
message SearchProductsReq {
  string query = 1 [(api.query) = "q"];
}